// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WizardSTepButtons should add custom className to toolbar 1`] = `
<footer
  className="pf-c-wizard__footer foo-class"
>
  <NextButton
    getState={[MockFunction]}
    handleNext={[MockFunction]}
    handleSubmit={[MockFunction]}
    nextLabel="Next"
    onCancel={[MockFunction]}
    submit={[MockFunction]}
    submitLabel="Submit"
    valid={true}
  />
  <Component
    onClick={[MockFunction]}
    type="button"
    variant="secondary"
  >
    Back
  </Component>
  <Component
    onClick={[Function]}
    type="button"
    variant="link"
  >
    Cancel
  </Component>
</footer>
`;

exports[`<WizardSTepButtons should render correctly 1`] = `
<footer
  className="pf-c-wizard__footer "
>
  <NextButton
    getState={[MockFunction]}
    handleNext={[MockFunction]}
    handleSubmit={[MockFunction]}
    nextLabel="Next"
    onCancel={[MockFunction]}
    submit={[MockFunction]}
    submitLabel="Submit"
    valid={true}
  />
  <Component
    onClick={[MockFunction]}
    type="button"
    variant="secondary"
  >
    Back
  </Component>
  <Component
    onClick={[Function]}
    type="button"
    variant="link"
  >
    Cancel
  </Component>
</footer>
`;
